tests/ui/type-alias-impl-trait/nested-tait-inference2.stderr
error[E0277]: the trait bound `(): Foo<FooX>` is not satisfied
  --> $DIR/nested-tait-inference2.rs:13:13
   |
LL | fn foo() -> impl Foo<FooX> {
   |             ^^^^^^^^^^^^^^ the trait `Foo<FooX>` is not implemented for `()`
LL |
LL |     ()
   |     -- return type was inferred to be `()` here
   |
   = help: the following other types implement trait `Foo<A>`:
             <() as Foo<u32>>
             <() as Foo<()>>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
